# Vulkan_Rays

./: tareas.txt
OtroIntento/TFM_RAYTRACING/: CMakeLists.txt
OtroIntento/TFM_RAYTRACING/src/: main.cpp
Vulkan_Project/: Vulkan_Project.sln  Vulkan_Project.vcxproj  Vulkan_Project.vcxproj.filters  main.cpp
Vulkancore/: Vulkancore.cpp  Vulkancore.vcxproj  Vulkancore.vcxproj.filters
miejecutable/: Keyboard.cpp  Renderer.cpp  Renderer.h  VulkanApp.cpp  main.cpp  miejecutable.vcxproj  miejecutable.vcxproj.filters  test.frag  test.frag.spv  test.vert  test.vert.spv
miejecutable/shaders/: raytrace.rgen  raytrace.rgen.spv  raytrace.rmiss  raytrace.rmiss.spv  rt_shaders.txt
milibreria/: core.cpp  core.h  core_fpcamera.cpp  core_fpcamera.h  core_glfw.cpp  core_glfw.h  core_graphics_pipeline.cpp  core_graphics_pipeline.h  core_queue.cpp  core_rt.cpp  core_rt.h  core_shader.cpp  core_simple_mesh.h  core_wrapper.cpp  core_wrapper.h  milibreria.vcxproj  milibreria.vcxproj.filters  physical_device.cpp  physical_device.h  stb_image.cpp  utils.cpp  utils.h
